// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/Overlay Position center 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  min-height: 455px;
  height: auto;
  background-color: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
      open={true}
    >
      <div
        style={
          Object {
            "padding": "5rem 4rem",
            "text-align": "center",
          }
        }
      >
        Some content
      </div>
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/organisms/Overlay Position left 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  min-height: 455px;
  height: 100%;
  background-color: #fff;
  left: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  -webkit-animation: jhEmMy 0.4s both;
  animation: jhEmMy 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  opacity: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
      open={true}
    >
      <div
        style={
          Object {
            "padding": "5rem 4rem",
            "text-align": "center",
          }
        }
      >
        Some content
      </div>
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/organisms/Overlay Position right 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: auto;
  min-height: 455px;
  height: 100%;
  background-color: #fff;
  right: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-animation: brnJVY 0.4s both;
  animation: brnJVY 0.4s both;
  -webkit-animation-delay: .1s;
  animation-delay: .1s;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
    onClick={[Function]}
    open={true}
  >
    <div
      className="c2"
      onClick={[Function]}
      open={true}
    >
      <div
        style={
          Object {
            "padding": "5rem 4rem",
            "text-align": "center",
          }
        }
      >
        Some content
      </div>
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;
